--- a/vignettes/Development/Quality control/Publication/Microplastic_verification.Rmd
+++ b/vignettes/Development/Quality control/Publication/Microplastic_verification.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Microplastic verification"
-author: "Anne Hids & Valerie de Rijk"
+title: "Verification of SimpleBox4Plastics - spreadsheet versus R implementation"
+author: "Valerie de Rijk, Anne Hids, Matthias Hof and Joris Quik"
 date: "`r Sys.Date()`"
 output: github_document
 editor_options: 
@@ -15,40 +15,63 @@ knitr::opts_chunk$set(echo = TRUE)
 projectRoot <- paste(getwd(), "..", "..", "..", "..", sep = "/")
 knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
 options(dplyr.summarise.inform=FALSE)
-knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 10)
+knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 8)
 ```
 
-This vignette demonstrates the verification process of the particulate
-version of Simplebox, in this case for microplastics. First, the k's are
-compared between R and excel and consequently the steady state masses
-are compared.
+This vignette demonstrates the verification process of SimpleBox
+implemented in R (version 2024.8.0) and in an Excel^TM^ spreadsheet
+(xl4plastic v4.0.5). To do this the 1^st^ order rate constants (k's) and
+steady state masses are compared between the two model implementations.
+The differences should be negligible and only based on rounding errors.
+In this case we choose a relative difference of the k's or masses
+between the models to not exceed 0.1%.
 
-The world needs to be initialized for a substance. In this case, that
-substance is microplastic, which has a default radius of 2.5e-5 m.
+# Verification method
 
-We will first show the version of the model without adjustments to match the 
-excel version. This will show the differences between excel and R. Consequently,
-we will show the version of the model that was adjusted to match the excel version. 
-This adjusted version should yield the same results as the model in excel, except 
-for rounding differences. 
-
-## Run the model without adjustments
-
-```{r Initialize,include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
+```{r InitializeSBoo, include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
 substance <- "microplastic"
 source("baseScripts/initWorld_onlyPlastics.R")
-
 World$substance <- substance
 ```
 
-```{r comparison of fluxes with test FALSE, message=FALSE, include=TRUE, echo=FALSE, warning=FALSE}
+The SBoo world is initialized for a substance. In this case, that
+substance is `r World$fetchData("Substance")`, which is of class: `r World$fetchData("ChemClass")` and a default
+radius of `r World$fetchData("RadS")*1e6` µm.
+
+At release already improvements or developments have been implemented in
+the R version of SimpleBox (SBoo) which are not implemented in Excel
+which will result in differences between the spreadsheet and R
+implementation. For this reason a TEST variable has been introduced to
+the changed algorithms in R in order to verify the outcome of SimpleBox
+in R with the original implementation in the spreadsheet version. So,
+TEST variable is a boolean, that can be used to calculate some processes
+in R the same way as in excel for the verification without removing the
+improvements that are made. For this reason we show the verification in
+two steps:
+
+1.  Compare k's and steady state masses of SBoo with updates to the
+    spreadsheet.
+
+2.  Compare k's and steady state masses of adapted SBoo using TEST
+    variable to the spreadsheet.
+
+When comparing k's and steady state masses between SimpleBox in R and
+Excel^TM^, the goal is that the relative difference is less than 0.1
+percent for each k and steady state mass. The reason is that smaller
+differences are almost inevitable due to differences in rounding values
+between excel and R, and not the result of mistakes in calculations or
+input values.
+
+# Step 1. Compare SBoo (incl. updates) to spreadsheet
+
+```{r comparison_1, message=FALSE, include=TRUE, echo=FALSE, warning=FALSE}
 
 library(openxlsx)
 library(tidyverse)
 library (ggplot2)
 library(plotly)
 
-SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4plastics_rev009-1_",substance,".xlsx") 
+SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/20240815 SimpleBox4plastics.xlsx") 
 
 SBexcel.K <- read.xlsx(SBExcelName,
                   colNames = FALSE,
@@ -122,14 +145,13 @@ kaas2$fromto <- paste(sep = "_", kaas2$from, kaas2$to)
 diagonal_excel <- SBexcel.K[SBexcel.K$from == SBexcel.K$to,] #all the diagonals in excel are negative values -> sums of all the "froms" of that compartment
 
 #filter out dissolved and gas processes
-
 filtered_excel <- diagonal_excel[!endsWith(diagonal_excel$from, "D"), ]
 filtered_excel <- filtered_excel[!endsWith(filtered_excel$from, "G"), ]
 
-#filter out molecular (unbound) state
-#R model has k values per process, not per box. For the "diagonal" ("from = to") boxes, this is different than in the excel version. summing all the "froms" here to be able to compare them with excel matrix. This should result in one value for each compartment (scale-subcomp-species combo)
-
+# R model has k values per process, not per box. For the "diagonal" ("from = to") boxes, this is different than in the excel version. summing all the "froms" here to be able to compare them with excel matrix. This should result in one value for each compartment (scale-subcomp-species combo)
 diagonal_R <-aggregate(k ~ from, data = kaas, FUN = sum) 
+
+# filter out molecular (unbound) state
 filtered_R <- diagonal_R[!endsWith(diagonal_R$from, "U"), ]
       
 #Single dataframe with both the R and excel diagonals
@@ -150,32 +172,27 @@ mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)
 
 ```
 
-## Compare k's
+## Compare first order rate constants
 
-When comparing k's between R and excel, the goal is that the relative difference
-is less than 0.001 for each k. The reason is that smaller
-differences often are a result of differences in rounding values between
-excel and R, and not the result of mistakes in calculations or different
-input values. In this vignette two types of k's are compared: diagonal
-k's and from-to k's.
+Two approaches are taken to comparing the 'engine' matrix of k's. First
+only the diagonal is taken and compared because this consists of all the
+k's relevant for that 'from' compartment including the removal
+processes. Second, the separate k's are compared per 'from' and 'to'
+compartment.
 
-At the time of this verification, some improvements were already made in
-the R version versus the excel version. This meant that some k's differ
-between R and excel, but not because the calculations or input values
-are wrong. In order to still be able to compare the two versions, the
-'Test' variable was created. This variable is a boolean, that can be
-used to calculate some processes in R the same way as in excel for the
-verification without removing the improvements that are made. When this
-test variable was used and why will be explained below.
+In summary k's are compared using:
 
-### Diagonal k's
+1.  The diagonal sum of k's (from + removal)
+
+2.  The separate from-to k's
+
+### Diagonal sum of 'from' k's
 
 Diagonal k's are k's that are on the diagonal of the k matrix. They are
 calculated as the sum of all the k's leaving the subcompartment plus the
 sum of the removal process k's (i.e. degradation or burial).
 
-```{r Plot diagonal differences, echo=FALSE, warning=FALSE}
-
+```{r PlotsDiagonalk_1,fig.cap = "Figure 1: Relative differences sum of from-k's between R and Spreadsheet implementation of SimpleBox (Test=FALSE)", echo=FALSE, warning=FALSE}
 custom_theme <- function() {
   theme(
     axis.text.y = element_text(size = 12),
@@ -188,51 +205,44 @@ custom_theme <- function() {
 } 
 
 # Plot of differences of the diagonals per compartment
-ggplot(sorted_diff, aes(x = from, y = diff)) +
-  geom_boxplot() +
-  ggtitle(paste0("Figure 1: Absolute differences removal k's between R and excel for ", substance)) +
-  geom_hline(yintercept = 0.001, color = "red") +
-  geom_hline(yintercept = -0.001, color = "red") +
-  custom_theme()+
-  labs(x = "from", y = "Absolute diff")
+# ggplot(sorted_diff, aes(x = from, y = diff)) +
+#   geom_boxplot() +
+#   ggtitle(paste0("Figure 1: Absolute differences removal k's between R and excel for ", substance)) +
+#   geom_hline(yintercept = 0.001, color = "red") +
+#   geom_hline(yintercept = -0.001, color = "red") +
+#   custom_theme()+
+#   labs(x = "from-Subcompartment Code", y = "Absolute diff")
 
 # Plot of relative differences of the diagonals per compartment
 ggplot(sorted_diff, aes(x = from, y = reldif)) +
   geom_boxplot() +
-  ggtitle(paste0("Figure 2: Relative differences removal k's between R and excel for ", substance)) +
+  ggtitle(paste0(substance)) +
   geom_hline(yintercept = 0.001, color = "red") +
   geom_hline(yintercept = -0.001, color = "red") +
   custom_theme()+
-  labs(x = "from", y = "Relative diff")
+  labs(x = "from-Subcompartment Code", y = "Relative diff")
+
+
 ```
-
-#### Dry deposition
-As can be seen in Figure 2 above, the only relative differences between the diagonal
-k's in excel and R are in the air compartment. This is caused by a difference in 
-the dry deposition process. In R, dry deposition is implemented in a new manner, 
-according to the Loteur v2 reference guide. See v.2.2002 <https://www.rivm.nl/lotos-euros>.
-
-When using Test=TRUE, the implementation of dry deposition in R is temporarily 
-set to the old implementation that was used in excel. 
 
 ### From-to k's
 
-```{r Plot k differences, echo=FALSE, warning=FALSE}
+```{r PlotFromTok_1, echo=FALSE, warning=FALSE, fig.cap="Figure 2: Relative differences from-to k's between R and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
 # "To" and "from" in one plot
-ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) + 
-  geom_point() +
-  scale_color_gradient(low = "green", high = "red", trans = "log10") +
-  ggtitle(paste0("Figure 3: Absolute differences k's between R and excel for ", substance)) +
-  theme(
-    axis.text.y = element_text(hjust = 1, size = 8),
-    axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
-    plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
-  )
+# ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) + 
+#   geom_point() +
+#   scale_color_gradient(low = "green", high = "red", trans = "log10") +
+#   ggtitle(paste0("Figure 3: Absolute differences k's between R and excel for ", substance)) +
+#   theme(
+#     axis.text.y = element_text(hjust = 1, size = 8),
+#     axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
+#     plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
+#   )
 
 ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
   geom_point() +
   scale_color_gradient(low = "green", high = "red") +
-  ggtitle(paste0("Figure 4: Relative differences k's between R and excel for ", substance)) +
+  ggtitle(paste0(substance)) +
   theme(
     axis.text.y = element_text(size = 8),
     axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
@@ -240,31 +250,88 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   )
 ```
 
-```{r filter large differences, include=FALSE, echo=FALSE}
-large_differences <- mergedkaas |>
+#### Dry deposition {#sec-dry-deposition}
+
+As can be seen in Figure 1 and 2 above, the only relative differences larger than 0.1% (e.g. for
+the diagonal k's in excel and R) are in the air compartment. This is
+caused by a difference in the implementation of the dry deposition process. In R, dry
+deposition is implemented in a new manner, according to the Loteur v2
+reference guide. See v.2.2002 <https://www.rivm.nl/lotos-euros>. Whereas in the spreadsheet implementation a slightly more simplified approach was taken.
+
+Below Test=TRUE will be used, setting the implementation of dry deposition in R temporarily to the old implementation that was used in the Spreadsheet implementation of SimpleBox.
+
+We can filter out the exact k's that have a relative difference larger than 0.1%:
+
+```{r TableDifferences, echo=FALSE, message=FALSE, warning=FALSE, paged.print=TRUE}
+mergedkaas |>
   mutate(relDif = abs(relDif)) |>
   filter(relDif > 0.001) |>
-  arrange(desc(relDif))
+  arrange(desc(relDif)) |> knitr::kable(digits = 30)
 ```
 
-#### Dry deposition
-As can be seen in Figure 4, the largest relative differences in k's between R and
-excel are in the k's from air to soil and water. These differences can also be 
-attributed to the different implementation of the dry deposition process between 
-excel and R.
+### Steadystate mass
+```{r PlotSteadyState_1, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 3: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
+library(stringi)
+World$NewSolver("SB1Solve")
+emissions <- data.frame(Abbr = c("aRS", "s2RS", "w1RS"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
+emissions <- emissions |>
+  mutate(Emis = Emis*1000/(365*24*60*60))
 
-#### Thermal velocity heteroagglomeration
-A smaller difference that was found between the k's in R and excel is the value 
-for thermal velocity in heteroagglomeration. In excel, a constant value of 285K 
-was used. In R, this value was updated by calculating the value specifically 
-for the temperature of the current scale. 
+SSsolve.R <- World$Solve(emissions)
+SSsolve.excel <- read.xlsx(SBExcelName,
+                             sheet=8,
+                             colNames=TRUE,
+                             rows=c(167,169))
 
-## Run again with Test=TRUE
+SSsolve.excel <- SSsolve.excel |>
+  select(-c(STEADY.STATE)) |>
+  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything())  |>
+  mutate(Species = case_when(
+    substr(Abbr, nchar(Abbr), nchar(Abbr)) == "G" ~ "Gas",
+    substr(Abbr, nchar(Abbr), nchar(Abbr)) == "D" ~ "Dissolved",
+    substr(Abbr, nchar(Abbr), nchar(Abbr)) == "P" ~ "Large",
+    substr(Abbr, nchar(Abbr), nchar(Abbr)) == "A" ~ "Small",
+    substr(Abbr, nchar(Abbr), nchar(Abbr)) == "U" ~ "Unbound",
+    substr(Abbr, nchar(Abbr), nchar(Abbr)) == "S" ~ "Solid",
+    TRUE ~ "Other"
+  )) |>
+  filter(EqMass != 0) |>
+  mutate(Abbr = str_sub(Abbr, 1, -2))
 
-Now the value for the Test variable can be changed to TRUE, and the difference
-in k's between excel and R can be tested again: 
+SSsolve.R <- SSsolve.R |> mutate(Abbr =  paste0(accronym_map[SubCompart], 
+                            accronym_map2[Scale])) |>
+  filter(EqMass != 0)
 
-```{r include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
+merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by=c("Abbr", "Species"), suffixes = c(".R", ".Excel")) |>
+  mutate(absdiff = EqMass.R-EqMass.Excel) |>
+  mutate(reldiff = absdiff/EqMass.R) |>
+  mutate(Abbr = case_when(
+    Species == "Large" ~ paste0(Abbr,"P"),
+    Species == "Small" ~ paste0(Abbr,"A"),
+    Species == "Solid" ~ paste0(Abbr,"S"),
+    TRUE ~ "Other"
+  ))
+
+#Diff per "to" compartment
+ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
+  geom_boxplot() +
+  ggtitle(paste0(substance)) +
+  geom_hline(yintercept = 0.001, color="red") +
+  geom_hline(yintercept = -0.001, color="red") +
+  custom_theme() + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5)) 
+
+
+
+```
+
+The differences in k's drives the model output: the steady state mass. So a final check is to see how much the steady state masses differ between both implementations of SimpleBox (Figure 3). From this it is clear that there  are differences up to `r merged_SS_SB1$reldiff |> max() |> round(digits=3)*100`%. This is larger than the level we can consider negligible.
+
+# Step 2. Compare SBoo and Spreadsheet excluding updates (Test=TRUE)
+The verification's goal is to make sure no mistakes are made in porting SimpleBox from the spreadsheet implementation to R. For this reason the Test variable was included in algorithms that already implemented changes for specific variables or processes in SimpleBox. With the Test variable changed to TRUE the
+difference in k's and steady state masses is shown again in relation to the intended 0.1% verification level.
+
+```{r comparison_2, message=FALSE, warning=FALSE, include=FALSE}
 World$SetConst(Test = "TRUE")
 World$UpdateKaas(mergeExisting = FALSE)
 
@@ -376,20 +443,26 @@ mergedkaas$diff <- mergedkaas$k_R - mergedkaas$k_Excel #compare R k to Excel K
 mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)  
 ```
 
-```{r Plots test TRUE, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
+## Compare first order rate constants
+
+```{r PlotDiagonalk_2, fig.cap = "Figure 4: Relative differences sum of from-k's between R and Spreadsheet implementation of SimpleBox (Test=TRUE)", include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
 # Plot of relative differences of the diagonals per compartment
 ggplot(sorted_diff, aes(x = from, y = reldif)) +
   geom_boxplot() +
-  ggtitle(paste0("Figure 5: Relative differences removal k's between R and excel for ", substance)) +
+  ggtitle(paste0(substance)) +
   geom_hline(yintercept = 0.001, color = "red") +
   geom_hline(yintercept = -0.001, color = "red") +
-  #custom_theme()+
+  custom_theme()+
   labs(x = "from", y = "Relative diff")
 
+```
+
+
+```{r PlotFromTok_2, echo=FALSE, warning=FALSE, message=FALSE, fig.cap="Figure 5: Relative differences from-to k's between R and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
 ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
   geom_point() +
-  scale_color_gradient(low = "green", high = "red") +
-  ggtitle(paste0("Figure 6: Relative differences k's between R and excel for ", substance)) +
+  scale_color_gradient(low = "green", high = "red", limits = c(0, 0.001)) +
+  ggtitle(paste0(substance)) +
   theme(
     axis.text.y = element_text(size = 8),
     axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
@@ -397,17 +470,22 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   )
 ```
 
-As can be seen in Figures 5 and 6, there are no k's with a relative difference
-large than 0.001 between excel and R when Test=TRUE.
+As can be seen in Figures 4 and 5, there are no k's with a relative
+difference large than 0.1% between excel and R when Test=TRUE. Several k's have a relative difference between 0.1 and 0.01%. These are related to:
+Heteroagglomeration in porous media between particulate (S) and large heteroagglomerate/attached (P) species.
+Deposition from air to water/soil
+Erosion from soil to water
 
-## Compare steady state emissions
+```{r TableDifferences_2, eval=FALSE, message=FALSE, warning=FALSE, include=FALSE, paged.print=TRUE}
+mergedkaas |>
+  mutate(relDif = abs(relDif)) |>
+  filter(relDif > 0.0001) |>
+  arrange(desc(relDif)) |> knitr::kable(digits = 30)
+```
 
-The steady state masses in R and Excel were compared by calculating the
-relative differences between the masses in R and Excel (Figure 7). The
-figure shows that all masses between R and Excel relatively differ less
-than 0.001.
 
-```{r comparison of steady state emissions using SB1Solve, include= TRUE, echo= FALSE, warning=FALSE}
+## Steadystate mass
+```{r PlotSteadyState_2, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 6: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
 
 library(stringi)
 
@@ -415,7 +493,7 @@ World$NewSolver("SB1Solve")
 
 emissions <- data.frame(Abbr = c("aRS", "s2RS", "w1RS"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
 
-MW <- World$fetchData("MW")
+# MW <- World$fetchData("MW")
 
 emissions <- emissions |>
   mutate(Emis = Emis*1000/(365*24*60*60))
@@ -459,9 +537,12 @@ merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by=c("Abbr", "Species"), suffix
 #Diff per "to" compartment
 ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   geom_boxplot() +
-  ggtitle(paste0("Figure 7: Relative differences between steady state masses in excel and R (SB1solve) - ", substance)) +
+  ggtitle(paste0(substance)) +
   geom_hline(yintercept = 0.001, color="red") +
   geom_hline(yintercept = -0.001, color="red") +
   custom_theme() + 
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5)) 
+
 ```
+
+To test if the small differences (<0.1%) in first order rate constants is negligible (Figures 4 and 5), the steady state masses should also not differ by more than 0.1% between the R and Spreadsheet implementations of SimpleBox. This is indeed the case (Figure 6) as the max difference in now only `r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=4)*100`%. This proves that the port of SimpleBox4Plastics to R is successful in reproducing the results from the original spreadsheet implementation.
