fixing of typos

--- a/vignettes/Development/SolversandApproxFun.Rmd
+++ b/vignettes/Development/SolversandApproxFun.Rmd
@@ -24,7 +24,7 @@ Each strategy provides unique possibilities for solving problems. In this vignet
 
 ## Steady State Solving
 
-We will first demonstrate solving the system assuming steady state. This means we will obtain one output: the assumed equilibrium mass in each compartment. We first initialize the world, in this case for a molecular substance, after which we will creaty dummy input emission data. 
+We will first demonstrate solving the system assuming steady state. This means we will obtain one output: the assumed equilibrium mass in each compartment. We first initialize the world, in this case for a molecular substance, after which we will create dummy input emission data. 
 
 ```{r Initialize,include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
 Potential_substances <- c("1-aminoanthraquinone", # no class
