--- a/vignettes/x.2-Uncertain-solver-use.Rmd
+++ b/vignettes/x.2-Uncertain-solver-use.Rmd
@@ -59,7 +59,12 @@ Define triangular distribution function:
 ```{r Define triangular distribution function, warning=FALSE, message=FALSE}
 #TODO provide definition of function variables.
 
-triangular_cdf_inv <- function(u, a, b, c) {
+
+
+triangular_cdf_inv <- function(u, # ?Probability?
+                               a, # Minimum
+                               b, # Maximym
+                               c) { # Peak value
   ifelse(u < (c-a)/(b-a),
          a + sqrt(u * (b-a) * (c-a)),
          b - sqrt((1-u) * (b-a) * (b-c)))
@@ -67,7 +72,7 @@ triangular_cdf_inv <- function(u, a, b, c) {
 ```
 
 ##### Prepare variable samples
-Now we are ready to prepare the variable data and define the min, max and mode of the distribution for each variable. 
+Now we are ready to prepare the variable data and define the min, max and peak value of the distribution for each variable. 
 
 In this example the following three variables are used: 
 
@@ -75,9 +80,9 @@ In this example the following three variables are used:
 2. Area for regional river
 3. Erosion of agricultural soil
 
-In the chunk below, the name, scale, subcompartment, min, max and mode are defined for each variable.
+In the chunk below, the name, scale, subcompartment, min, max and peak value are defined for each variable.
 
-```{r Get min, max and mode of variable values, warning=FALSE, message=FALSE}
+```{r Get min, max and peak value of variable values, warning=FALSE, message=FALSE}
 # Define the names of the uncertain variables
 var1Name <- "Area"
 
@@ -88,7 +93,7 @@ var1 <- World$fetchData(var1Name) |>
 # Set the parameters for the triangular distribution
 var1$a <- var1$Area*0.7    # Minimum value
 var1$b <- var1$Area*1.3    # Maximum value
-var1$c <- var1$Area         # Mode (peak)
+var1$c <- var1$Area         # peak value (peak)
 
 # Define the names of the uncertain variables
 var2Name <- "Area"
@@ -100,7 +105,7 @@ var2 <- World$fetchData(var2Name) |>
 # Set the parameters for the triangular distribution
 var2$a <- var2$Area*0.7    # Minimum value
 var2$b <- var2$Area*1.3    # Maximum value
-var2$c <- var2$Area         # Mode (peak)
+var2$c <- var2$Area         # peak value (peak)
 
 
 # Define the names of the uncertain variables
@@ -113,7 +118,7 @@ var3 <- World$fetchData(var3Name) |>
 # Set the parameters for the triangular distribution
 var3$a <- var3$EROSIONsoil*0.7    # Minimum value
 var3$b <- var3$EROSIONsoil*1.3    # Maximum value
-var3$c <- var3$EROSIONsoil         # Mode (peak)
+var3$c <- var3$EROSIONsoil         # peak value (peak)
 ```
 
 Now this data needs to be combined into a tibble, and the function for the triangular distribution written earlier is applied to the tibble. The result is a nested tibble, containing the name, scale and subcompartment for each variable, and the sample data is nested. 
@@ -152,7 +157,7 @@ for (i in 1:n_vars) {
 
 In this example, we will take a steady state emission data frame as the starting 
 point for creating the triangular distributions. You could also directly enter the
-min, max and mode values if you have them.
+min, max and peak values if you have them.
 
 ```{r Create steady state emission dataframe, warning=FALSE, message=FALSE}
 # Create the steady state emission dataframe
@@ -179,7 +184,7 @@ comp1 <-  emissions |>
 # Set the parameters for the triangular distribution
 comp1$a <- comp1$Emis*0.7    # Minimum value
 comp1$b <- comp1$Emis*1.3    # Maximum value
-comp1$c <- comp1$Emis        # Mode (peak)
+comp1$c <- comp1$Emis        # peak value (peak)
 
 comp1 <- comp1 |>
   select(-Emis)
@@ -193,7 +198,7 @@ comp2 <-  emissions |>
 # Set the parameters for the triangular distribution
 comp2$a <- comp2$Emis*0.7    # Minimum value
 comp2$b <- comp2$Emis*1.3    # Maximum value
-comp2$c <- comp2$Emis        # Mode (peak)
+comp2$c <- comp2$Emis        # peak value (peak)
 
 comp2 <- comp2 |>
   select(-Emis)
@@ -246,7 +251,7 @@ lhs_samples <- randomLHS(n_samples, n_vars) # Generate numbers between 0 and 1 u
 
 The rest of the steps to create the dataframe with samples are the same as for method 1. 
 
-```{r Get min, max and mode of variable values 2, warning=FALSE, message=FALSE}
+```{r Get min, max and peak value of variable values 2, warning=FALSE, message=FALSE}
 # Define the names of the uncertain variables
 var1Name <- "Area"
 
@@ -257,7 +262,7 @@ var1 <- World$fetchData(var1Name) |>
 # Set the parameters for the triangular distribution
 var1$a <- var1$Area*0.7    # Minimum value
 var1$b <- var1$Area*1.3    # Maximum value
-var1$c <- var1$Area         # Mode (peak)
+var1$c <- var1$Area         # peak value (peak)
 
 # Define the names of the uncertain variables
 var2Name <- "Area"
@@ -269,7 +274,7 @@ var2 <- World$fetchData(var2Name) |>
 # Set the parameters for the triangular distribution
 var2$a <- var2$Area*0.7    # Minimum value
 var2$b <- var2$Area*1.3    # Maximum value
-var2$c <- var2$Area         # Mode (peak)
+var2$c <- var2$Area         # peak value (peak)
 
 
 # Define the names of the uncertain variables
@@ -282,7 +287,7 @@ var3 <- World$fetchData(var3Name) |>
 # Set the parameters for the triangular distribution
 var3$a <- var3$EROSIONsoil*0.7    # Minimum value
 var3$b <- var3$EROSIONsoil*1.3    # Maximum value
-var3$c <- var3$EROSIONsoil         # Mode (peak)
+var3$c <- var3$EROSIONsoil         # peak value (peak)
 
 params <- tibble(
   varName = c(var1Name, var2Name, var3Name),
